--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
   <title>İzin Talebi</title>
+  <link rel="icon" href="logo.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Poppins', sans-serif;
-      background: url('logo.png') center center no-repeat;
-      background-size: contain;
-      background-color: #2e2e2e;
+      background: url('logo.png') center center no-repeat, #2e2e2e;
+      background-size: 60%;
       color: #fff;
       text-align: center;
       padding-top: 80px;
       margin: 0;
-      transition: background 0.5s ease;
       height: 100vh;
+      transition: background 0.5s ease;
     }
     h1 {
-      font-size: 28px;
-      margin-bottom: 40px;
+      font-size: 26px;
+      margin-bottom: 30px;
       text-shadow: 1px 1px 4px #000;
       background-color: rgba(0,0,0,0.5);
       display: inline-block;
-      padding: 10px 20px;
+      padding: 12px 24px;
       border-radius: 12px;
+      transition: transform 0.3s ease;
+    }
+    .success {
+      transform: scale(1.05);
+      color: #a0ffcb;
     }
     button {
       padding: 14px 30px;
@@ -34,8 +41,9 @@
       border: none;
       border-radius: 12px;
       cursor: pointer;
-      transition: 0.3s ease;
+      transition: all 0.3s ease;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      position: relative;
     }
     button:hover {
       transform: scale(1.05);
@@ -62,31 +70,57 @@
       color: rgba(255,255,255,0.7);
       margin-top: 50px;
     }
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 20px;
+        padding: 10px;
+      }
+      button {
+        font-size: 16px;
+        padding: 10px 20px;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <h1 id="soru">Pazartesi ve Salı evden çalışabilir miyim?</h1>
+  <h1 id="soru">Merhabalar Sinan Bey, Pazartesi ve Salı evden çalışabilir miyim?</h1>
+  <br>
   <button class="yes" onclick="izinOnay()">Evet 🏡</button>
-  <button class="no" onclick="eminMisin()">Hayır ❌</button>
+  <button class="no" id="noBtn" onclick="eminMisin()">Hayır ❌</button>
   <div id="emoji"></div>
+  <p style="margin-top:30px; background: rgba(255,255,255,0.1); display:inline-block; padding:10px 20px; border-radius:12px;">
+    💬 Tüm iş bilgisayarım hazır, internet bağlantım stabil ve ekipmanım eksiksizdir.
+  </p>
   <div class="not">* Bu sayfa mizahi ve sevgi dolu bir izin talebidir :)</div>
 
   <script>
     let redFlag = 0;
+    const noBtn = document.getElementById("noBtn");
+
+    noBtn.addEventListener("mouseenter", () => {
+      noBtn.style.position = "absolute";
+      noBtn.style.top = Math.random() * 70 + "%";
+      noBtn.style.left = Math.random() * 70 + "%";
+    });
 
     function izinOnay() {
-      document.getElementById("soru").innerText = "Teşekkür ederim! Bilgisayarımı açıyorum hemen 💻";
+      document.body.style.background = "linear-gradient(to right, #00b09b, #96c93d)";
+      const soru = document.getElementById("soru");
+      soru.innerText = "Teşekkür ederim! Bilgisayarımı açıyorum hemen 💻";
+      soru.classList.add("success");
       document.getElementById("emoji").innerHTML = '<div class="emoji">😊</div>';
     }
 
     function eminMisin() {
       redFlag++;
+      const soru = document.getElementById("soru");
       if (redFlag < 4) {
-        document.getElementById("soru").innerText += " Lütfen tekrar düşünür müsünüz? 🙏";
+        soru.innerText += " Lütfen tekrar düşünür müsünüz? 🙏";
       } else {
-        document.getElementById("soru").innerText = "Tamam... ama yine de ofiste gibi çalışacağım 🥲";
+        soru.innerText = "Tamam... ama yine de ofiste gibi çalışacağım 🥲";
         document.getElementById("emoji").innerHTML = "💼";
+        document.body.style.background = "linear-gradient(to right, #2c3e50, #4ca1af)";
       }
     }
   </script>
