--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <button class="no" id="noBtn">Hayır ❌</button>
   <div id="emoji"></div>
   <p style="margin-top:30px; background: rgba(255,255,255,0.1); display:inline-block; padding:10px 20px; border-radius:12px;">
-    💬 Derhal Göreve başlıyorum. Teşekkürler. :)
+    💬 Tüm ekipmanım hazırdır. :)
   </p>
   <div class="not">* mhmtorc izin talebidir. Farklılıklar güzeldir :)</div>
 
@@ -111,7 +111,7 @@
     // Evet basınca sadece mesaj ve emoji değişir, arka plan sabit kalır
     function izinOnay() {
       const soru = document.getElementById("soru");
-      soru.innerText = "Teşekkür ederim! Bilgisayarımı açıyorum hemen 💻";
+      soru.innerText = "Teşekkür ederim! Derhal hazırlıklara başlıyorum 💻";
       soru.classList.add("success");
       document.getElementById("emoji").innerHTML = '<div class="emoji">😊</div>';
     }
